--- a/src/sass/cropper.scss
+++ b/src/sass/cropper.scss
@@ -226,7 +226,7 @@
         background:darkgrey;
     }
     &-hide {
-        display: block;
+        display: none;
         height: 0;
         position: absolute;
         width: 0;
